height set to auto on element w/ class .jumbotron

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <!-- Current test question group is divided in sub-rows for purpose of clean mobile integration-->
         <main class="mt-3 row d-flex justify-content-center mt-4" id="currentTestQuestion"> 
             <div> 
-            <h3 class="jumbotron text-center d-flex align-items-center col-xs-12 col-sm-12 col-md-12 col-lg-12" style="height:65px;" id="question"></h3>
+            <h3 class="jumbotron text-center d-flex align-items-center col-xs-12 col-sm-12 col-md-12 col-lg-12" style="height:auto;" id="question"></h3>
             
                 <ul class="row answerList mt-3" style="list-style-type: none;">
-                    <li class="col-xs-12 col-sm-12 col-med-4 col-lg-4 mt-1 bg-primary text-white text-center border border-white d-flex justify-content-center align-items-center" id="answer_A" style="height:50px; width:150px;"> </li>
-                    <li class="col-xs-12 col-sm-12 col-med-4 col-lg-4 mt-1 bg-secondary text-white text-center border border-white d-flex justify-content-center align-items-center" id="answer_B" style="height:50px; width:150px;"> </li> 
-                    <li class="col-xs-12 col-sm-12 col-med-4 col-lg-4 mt-1 bg-info text-white text-center border border-white d-flex justify-content-center align-items-center" id="answer_C" style="height:50px; width:150px;"> </li> 
+                    <li class="col-xs-12 col-sm-12 col-md-4 col-lg-4 mt-1 bg-primary text-white text-center border border-white d-flex justify-content-center align-items-center" id="answer_A" style="height:50px; width:150px;"> </li>
+                    <li class="col-xs-12 col-sm-12 col-md-4 col-lg-4 mt-1 bg-secondary text-white text-center border border-white d-flex justify-content-center align-items-center" id="answer_B" style="height:50px; width:150px;"> </li> 
+                    <li class="col-xs-12 col-sm-12 col-md-4 col-lg-4 mt-1 bg-info text-white text-center border border-white d-flex justify-content-center align-items-center" id="answer_C" style="height:50px; width:150px;"> </li> 
                </ul>
         
             <div class="row mt-3">
