Working to parse JSON localStorage object

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         </div>
         </div>
        </main>
-        </div>
+
+
+       <section id="lastScore"> </section>
+
+    </div>
        <script src="./js/startPage.js"></script>
        
        </html>
